# bammy

./: .gitignore  CMakeLists.txt  README.md  TODO.md
bammy/src/: main.cpp
bammy/src/cli/: bammy.cpp  bammy.hpp
bammy/src/io/: fastx.cpp  fastx.hpp
